[package]
name = "snowy"
version = "0.2.0"
edition = "2021"
description = "Snowy, is a command line tool to make release managment easy."
authors = ["slievr"]
repository = "https://github.com/slievr/snowy"
readme = "README.md"
license = "GPL-3.0-or-later"
exclude = ["*.jpeg", "*.png"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
git2 = "0.19.0"
gix = { version = "0.63.0", features = ["status"] }
inquire = "0.7.5"
regex = "1.10.4"
toml = "0.8.15"
toml_edit = "0.22.20"
